# c-study

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  hello.cpp
.devcontainer/: .clang-tidy  apt-packages.in
.devcontainer/scripts/: initialize
block2-lesson1/: CMakeLists.txt
homeworks/01_ballistic_task/: solution.cpp  test_3.txt
homeworks/02_drone_emulation/: CMakeLists.txt  solution.cpp
homeworks/03_memory_basics/: CMakeLists.txt  ammo.json  input_4.json  solution.cpp  solution.sent.cpp
homeworks/05_diagnostic_telemetry_parser/: CMakeLists.txt
homeworks/06_tests_code_quality/: CMakeLists.txt  solution.cpp  test_4.txt
homeworks/06_tests_code_quality/data/: test_1_basic_close_target.txt  test_2_basic_far_target.txt  test_5_drone_over_target.txt  test_6_unknown_ammo.txt
homeworks/06_tests_code_quality/include/: ballistics.hpp  ballisticts.hpp
homeworks/06_tests_code_quality/src/: ballistics.cpp  ballisticts.cpp  main.cpp
homeworks/06_tests_code_quality/tests/: ballistics_tests.cpp
homeworks/07_classes_interfaces_patterns/: solution.cpp  targets.json
homeworks/08_introduction_to_stl/: CMakeLists.txt  input_1.json  input_5.json  solution.cpp
homeworks/08_introduction_to_stl/data/: input_2.json  input_3.json
homeworks/08_introduction_to_stl/include/: Logger.hpp  MathUtils.hpp  MissionProcessor.hpp  Types.hpp  types.hpp
homeworks/08_introduction_to_stl/include/config/: ComponentFactory.hpp  FileConfigLoader.hpp
homeworks/08_introduction_to_stl/include/interfaces/: IBallisticSolver.hpp  IConfigLoader.hpp  ITargetProvider.hpp
homeworks/08_introduction_to_stl/include/providers/: JsonTargetProvider.hpp
homeworks/08_introduction_to_stl/include/solvers/: AnalyticalSolver.hpp
homeworks/08_introduction_to_stl/src/: MissionProcessor.cpp  main.cpp
homeworks/08_introduction_to_stl/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homeworks/08_introduction_to_stl/src/providers/: JsonTargetProvider.cpp
homeworks/08_introduction_to_stl/src/solvers/: AnalyticalSolver.cpp
homeworks/08_introduction_to_stl/src/utils/: MathUtils.cpp
homeworks/1_ballistic_task/: script  solution.cpp
preps/: README.md
(+11 files in other folders)
